# smolgrad

./: Cargo.toml  README.md
src/: lib.rs  main.rs  ops.rs  optim.rs  tensor.rs  utils.rs
src/ops/: cpu.rs  gpu.rs
