[package]
name = "smolgrad"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/smolgrad"
repository = "https://github.com/mattsse/smolgrad"

[dependencies]
ndarray = { version = "0.15.3", features = ["rayon"] }
rayon = "1.5.1"
serde = { version = "1.0.126", optional = true }
ocl = "0.19.3"
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }
thiserror = "1.0.26"
paste = "1.0.5"
generational-arena = "0.2.8"

[dev-dependencies]
ndarray-rand = "0.14.0"